--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,13 @@
 /* the styles for the elements */
+* {
+	margin: 0;
+	padding: 0;
+}
+
 body {
 	font-family: Arial, Helvetica, sans-serif;
-    font-size: 100%;
-	width: 600px;
+	font-size: 100%;
+	width: 800px;
 	margin-top: 0;
 	margin-bottom: 0;
 	margin-right: auto;
@@ -10,16 +15,24 @@ body {
 	border: 3px solid #931420;
 	background-color: #fffded;
 }
-
+/*
 body header {
 	margin: 25px;
 }
+*/
 
 header{
 	border-bottom: 3px solid #931420;
-}
-#hat {
+	padding-top: 1.5em;
+	padding-bottom: 2em;
 	background-image: -webkit-linear-gradient(30deg, #f6bb73 0%, #f6bb73 30%, white 50%, #f6bb73 80%, #f6bb73 100%);
+
+}
+
+header img {
+	float: left;
+	padding-right: 30px;
+	padding-left: 30px;
 }
 
 html {
@@ -27,49 +40,101 @@ html {
 }
 
 .shadow {
-	text-shadow:1px 1px #800000;
+	text-shadow:2px 2px 2px #800000;
 }
 
 /* the styles for the header */
-header img {
-	float: left;
-}
-
 header h2 {
 	font-size: 170%;
 	color: #800000;
-	text-indent: 30px;
 }
 
 header h3{
 	font-size: 130;
 	font-style: italic;
-	text-indent: 30px;
 }
 
 /* the styles for the section */
 main {
 	clear: left;
-	padding-right: 30px;
-	padding-left: 30px;
 }
 
-main h1 {
-	font-size: 150%;
-	border-bottom: 3px solid #931420;
-	border-top: 3px solid #931420;
-	padding-top: .3em;
-	padding-bottom: .3em;
+section {
+	width: 525px;
+	float: right;
+	padding-right: 20px;
+	padding-left: 20px;
+	padding-bottom: 20px;
 }
 
-main h2 {
+aside {
+	width: 215px;
+	float: right;
+	padding-left: 20px;
+	padding-bottom: 20px;
+}
+
+aside h2 {
 	font-size: 130%;
 	color: #800000;
 	padding-top: .5em;
 	padding-bottom: .25em;
 }
 
-main h3 {
+aside h3 {
+	font-size: 105%;
+	padding-bottom: .25em;
+}
+
+aside img {
+	padding-bottom: 1em;
+}
+
+section h1 {
+	font-size: 150%;
+	padding-top: .5em;
+	padding-bottom: .25em;
+}
+
+section h2 {
+	font-size: 130%;
+	color: #800000;
+	padding-top: .5em;
+	padding-bottom: .25em;
+}
+
+article h3 {
+	font-size: 150%;
+	color: black;
+	padding-bottom: .25em;
+	/*padding-top: .5em;
+	margin-top: 0;
+	margin-top: 0; */
+}
+
+article {
+	padding: .5em 0;
+}
+
+article img {
+	float: right;
+	margin-top: .5em;
+	margin-left: 1em;
+	margin-bottom: 1em;
+	border: 1px solid black;
+}
+
+main article {
+	border-bottom: 3px solid #931420;
+	border-top: 3px solid #931420;
+}
+article h2 {
+	padding-top: 0;
+	color: #800000;
+}
+
+article h3 {
+	color: black;
 	font-size: 105%;
 	padding-bottom: .25em;
 }
@@ -78,21 +143,20 @@ main img {
 	padding-bottom: 1em;
 }
 
-main p {
+section p {
 	padding-bottom: .5em;
 }
 
-main blockquote{
+section blockquote{
 	padding-right: 2em;
-	padding-left: 2em;
 }
 
-main ul{
+section ul{
 	padding-bottom: .25em;
 	padding-left: 1.25em;
 }
 
-main li {
+section li {
 	padding-bottom: .35em;
 }
 
@@ -106,9 +170,10 @@ footer p{
 	font-size: 100%;
 	padding-top: 1em;
 	padding-bottom: 1em;
+	color: white;
 }
 
 footer {
-	background-color: #931420;
-	color: white;
+	background-color: #931420;;
+	clear: both;
 }
